--- a/casepilot-ui/P-SOLUTION_HISTORY.html
+++ b/casepilot-ui/P-SOLUTION_HISTORY.html
@@ -7,29 +7,35 @@
 
   <script src="assets/tailwind-config.js"></script>
   <script src="https://unpkg.byted-static.com/coze/space_ppt_lib/1.0.3-alpha.12/lib/tailwindcss.js"></script>
-  <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="stylesheet" href="assets/styles-v5.css" />
   <script src="https://unpkg.byted-static.com/fortawesome/fontawesome-free/6.7.2/js/all.min.js" data-auto-replace-svg="nest"></script>
 </head>
 <body class="bg-bg-primary min-h-screen cp-grid-bg">
-  <header class="sticky top-0 z-50 bg-white/85 backdrop-blur border-b border-border-light">
+  <header class="sticky top-0 z-50 glass">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
-      <a href="P-HOME.html" class="flex items-center gap-3">
-        <div class="w-10 h-10 bg-gradient-primary rounded-xl flex items-center justify-center shadow-glow">
-          <i class="fas fa-cube text-white"></i>
+      <!-- Logo区域 - 固定宽度 -->
+      <a href="P-HOME.html" class="flex items-center gap-3" style="min-width: 220px;">
+        <div class="w-10 h-10 rounded-xl flex items-center justify-center overflow-hidden bg-white logo-icon">
+          <img src="assets/logo.png" alt="CasePilot Logo" class="w-full h-full object-contain" />
         </div>
         <div class="leading-tight">
-          <div class="text-lg font-extrabold gradient-text">CasePilot</div>
-          <div class="text-xs text-text-secondary">历史方案</div>
+          <div class="text-xl font-bold gradient-text whitespace-nowrap logo-text-brand">CasePilot</div>
+          <div class="text-sm text-text-secondary whitespace-nowrap logo-text-subtitle">历史方案</div>
         </div>
       </a>
-      <nav class="hidden md:flex items-center gap-2">
-        <a class="px-3 py-2 rounded-lg text-sm text-text-secondary hover:text-primary hover:bg-bg-secondary" href="P-SOLUTION_GENERATOR.html">协作生成</a>
-        <a class="px-3 py-2 rounded-lg text-sm nav-link-active" href="P-SOLUTION_HISTORY.html">历史方案</a>
-        <a class="px-3 py-2 rounded-lg text-sm text-text-secondary hover:text-primary hover:bg-bg-secondary" href="P-CASE_LIBRARY.html">案例库</a>
+
+      <!-- 导航菜单 - 固定宽度居中 -->
+      <nav class="hidden md:flex items-center gap-1" style="min-width: 380px; justify-content: center;">
+        <a class="nav-link px-4 py-2 text-base whitespace-nowrap" href="P-HOME.html">首页</a>
+        <a class="nav-link px-4 py-2 text-base whitespace-nowrap" href="P-SOLUTION_GENERATOR.html">协作生成</a>
+        <a class="nav-link px-4 py-2 text-base whitespace-nowrap" href="P-CASE_LIBRARY.html">案例库</a>
+        <a class="nav-link-active px-4 py-2 text-base whitespace-nowrap" href="P-SOLUTION_HISTORY.html">历史方案</a>
       </nav>
-      <div class="flex items-center gap-3">
-        <a href="P-SOLUTION_GENERATOR.html" class="inline-flex items-center gap-2 px-4 py-2 rounded-xl bg-gradient-primary text-white shadow-card-hover">
-          <i class="fas fa-plus"></i>
+
+      <!-- 右侧操作区 - 固定宽度右对齐 -->
+      <div class="flex items-center gap-3 justify-end" style="min-width: 240px;">
+        <a href="P-SOLUTION_GENERATOR.html" class="inline-flex items-center gap-2 cp-btn cp-btn-primary text-base px-4 py-2 whitespace-nowrap">
+          <i class="fa-solid fa-plus"></i>
           新方案
         </a>
       </div>
@@ -51,12 +57,12 @@
     <div class="mt-6 grid lg:grid-cols-3 gap-4" id="cp-history"></div>
   </main>
 
-  <footer class="border-t border-border-light bg-white/70">
+  <footer class="border-t border-border glass">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 flex flex-col sm:flex-row gap-3 sm:items-center sm:justify-between">
-      <div class="text-sm text-text-secondary">© CasePilot · Engineering-grade AI Output</div>
+      <div class="text-sm text-text-secondary">© CasePilot v5.0 · Engineering-grade AI Output</div>
       <div class="text-sm text-text-secondary flex items-center gap-4">
-        <a class="hover:text-primary" href="P-SOLUTION_GENERATOR.html">协作生成</a>
-        <a class="hover:text-primary" href="P-LOGIN_REGISTER.html">登录</a>
+        <a class="hover:text-accent transition-colors" href="P-SOLUTION_GENERATOR.html">协作生成</a>
+        <a class="hover:text-accent transition-colors" href="P-LOGIN_REGISTER.html">登录</a>
       </div>
     </div>
   </footer>
